--- a/config/polybar/config
+++ b/config/polybar/config
@@ -224,7 +224,7 @@ card = intel_backlight
 [module/cpu]
 type = internal/cpu
 interval = 3
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.icon-c1}
 format-underline = ${colors.c2}
 label = %percentage:2%%
@@ -232,7 +232,7 @@ label = %percentage:2%%
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.icon-c1}
 format-underline = #486352
 label = %percentage_used%%
@@ -285,7 +285,7 @@ date-alt = " %d-%m-%Y"
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.icon-c1}
 format-underline = #23334a
 
@@ -295,10 +295,10 @@ label = %time% %date%
 type = internal/pulseaudio
 
 format-volume = <label-volume> <bar-volume>
-label-volume =  %percentage%%
+label-volume = 墳 %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted =  Muted
+label-muted = 婢 Muted
 label-muted-foreground = #cf0a0a
 
 bar-volume-width = 10
@@ -389,7 +389,7 @@ format-underline = #f50a4d
 format-warn = <ramp> <label-warn>
 format-warn-underline = ${self.format-underline}
 
-label =   %temperature-c%
+label =   %temperature-c%
 label-warn = %temperature-c%
 label-warn-foreground = ${colors.icon-c1}
 
@@ -403,7 +403,7 @@ ramp-foreground = ${colors.foreground-alt}
 type = custom/text
 
 click-left = ~/.config/rofi/powermenu.sh
-content = %{T4}%{T-}
+content = 襤
 content-background = ${colors.shade-2}
 content-foreground = ${colors.shade-5}
 content-padding = 1
