--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -1,8 +1,13 @@
 #################################
 ###      Martin - Config      ###
+
+#picom --experimental-backends &
+
+
 #-------------------------------#
 #   Transparency / Opacity      #
 #################################
+
 
 # Use the opacity-rule to git transparency.
 
@@ -42,7 +47,7 @@ inactive-opacity = 1.0;
 # and there is also whether there is Focused or Unfocused.
 #
 #opacity-rule = [
-  #  "95:class_g = 'kitty' && focused",
+#  "95:class_g = 'kitty' && focused",
 #  "75:class_g = 'kitty' && !focused",
 #  "95:class_g = 'Alacritty' && focused",
 #  "75:class_g = 'Alacritty' && !focused"
@@ -50,12 +55,12 @@ inactive-opacity = 1.0;
 # Remember not to add comma "," to the last rule... but it must be at the end of all others.
 
 opacity-rule = [
-    "92:class_g = 'Rofi'",
-    "95:class_g = 'kitty' && focused",
-    "75:class_g = 'kitty' && !focused",
-    "95:class_g = 'Alacritty' && focused",
-    "75:class_g = 'Alacritty' && !focused"
-  ];
+  "92:class_g = 'Rofi'",
+  "95:class_g = 'kitty' && focused",
+  "75:class_g = 'kitty' && !focused",
+  "95:class_g = 'Alacritty' && focused",
+  "75:class_g = 'Alacritty' && !focused"
+];
 
 #################################
 #             Shadows           #
@@ -67,22 +72,22 @@ opacity-rule = [
 # unless explicitly requested using the wintypes option.
 #
 #shadow = false;
-shadow = true;
+#shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12;
-shadow-radius = 14;
+#shadow-radius = 14;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = 0.3;
+#shadow-opacity = 0.3;
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15;
-shadow-offset-x = -15;
+#shadow-offset-x = -15;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15;
-shadow-offset-y = -15;
+#shadow-offset-y = -15;
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0;
@@ -102,13 +107,13 @@ shadow-offset-y = -15;
 #   shadow-exclude = "n:e:Notification";
 #
 # shadow-exclude = []
-shadow-exclude = [
-    "name = 'Notification'",
-    "class_g = 'Conky'",
-    "class_g ?= 'Notify-osd'",
-    "class_g = 'Cairo-clock'",
-    "_GTK_FRAME_EXTENTS@:c"
-  ];
+#shadow-exclude = [
+#  "name = 'Notification'",
+#  "class_g = 'Conky'",
+#  "class_g ?= 'Notify-osd'",
+#  "class_g = 'Cairo-clock'",
+#  "_GTK_FRAME_EXTENTS@:c"
+#];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
 # clip-shadow-above = []
@@ -131,16 +136,16 @@ shadow-exclude = [
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-# fading = false;
+fading = false;
 #fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028;
-#fade-in-step = 0.03;
+fade-in-step = 0.01;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03;
-#fade-out-step = 0.03;
+fade-out-step = 0.01;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 # fade-delta = 10;
@@ -166,7 +171,7 @@ shadow-exclude = [
 
 # Exclude conditions for rounded corners.
 #rounded-corners-exclude = [
-  #  "window_type = 'dock'",
+#  "window_type = 'dock'",
 #  "window_type = 'desktop'"
 #];
 
@@ -189,6 +194,8 @@ shadow-exclude = [
 # The name of the switch may change without prior notifications.
 #blur-background = false;
 blur-background = true;
+blur-method = "dual_kawase";
+blur-strength = 3;
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
@@ -208,23 +215,25 @@ blur-background = true;
 #
 #blur-kern = "3x3box";
 #blur-kern = "5x5box";
-blur-kern = "7x7box";
+#blur-kern = "7x7box";
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
 blur-background-exclude = [
-    "window_type = 'dock'",
-    "window_type = 'desktop'",
-  	"window_type = 'utility'",
-  	"window_type = 'dialog'",
-  	"window_type = 'popup_menu'", #start_menu
-  	"window_type = 'menu'",
-  	"window_type = 'dropdown_menu'",
-  	"window_type = 'tooltip'",
-  	"window_type = 'splash'",
-  	"class_g = 'slop'",
-    "_GTK_FRAME_EXTENTS@:c"
-  ];
+# "window_type = 'dock'", # Polybar
+  "window_type = 'desktop'",
+  "window_type = 'utility'",
+	"window_type = 'dialog'",
+	"window_type = 'popup_menu'", #start_menu
+	"window_type = 'menu'",
+	"window_type = 'dropdown_menu'",
+	"window_type = 'tooltip'",
+	"window_type = 'splash'",
+	"class_g = 'slop'",
+  "class_g = 'Google-chrome'",
+  "class_g = 'Firefox-esr'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
 
 #################################
 #       General Settings        #
@@ -240,7 +249,7 @@ backend = "glx";
 #backend = "xrender";
 
 # Enable/disable VSync.
-# vsync = false;
+vsync = false;
 #vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
@@ -265,14 +274,14 @@ backend = "glx";
 # Detect '_NET_WM_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_OPACITY' of client windows to frame windows.
 #
-# detect-client-opacity = false;
-#detect-client-opacity = true;
+#detect-client-opacity = false;
+detect-client-opacity = true;
 
 # Specify refresh rate of the screen. If not specified or 0, picom will
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60;
-#refresh-rate = 0;
+refresh-rate = 0;
 
 # Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
@@ -295,8 +304,8 @@ backend = "glx";
 # Use 'WM_TRANSIENT_FOR' to group windows, and consider windows
 # in the same group focused at the same time.
 #
-# detect-transient = false
-#detect-transient = true;
+#detect-transient = false;
+detect-transient = true;
 
 # Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same
 # group focused at the same time. This usually means windows from the same application
@@ -328,7 +337,7 @@ backend = "glx";
 # practically happened) and may not work with blur-background.
 # My tests show a 15% performance boost. Recommended.
 #
-# glx-no-stencil = false
+glx-no-stencil = true
 
 # GLX backend: Avoid rebinding pixmap on window damage.
 # Probably could improve performance on rapid window content changes,
@@ -342,8 +351,8 @@ backend = "glx";
 # has actually changed. Potentially degrades the performance, but might fix some artifacts.
 # The opposing option is use-damage
 #
-# no-use-damage = false
-#use-damage = true;
+#no-use-damage = false;
+use-damage = true;
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw
 # calls are finished before picom starts drawing. Needed on nvidia-drivers
@@ -385,7 +394,7 @@ backend = "glx";
 # If using the "TRACE" log level, it's better to log into a file
 # using *--log-file*, since it can generate a huge stream of logs.
 #
-# log-level = "debug"
+# log-level = "debug";
 log-level = "warn";
 
 # Set the log file.
@@ -438,10 +447,9 @@ log-level = "warn";
 #
 wintypes:
 {
-    tooltip = { fade = true; shadow = true; opacity = 0.95; focus = true; full-shadow = false; };
-    dock = { shadow = false; clip-shadow-above = true; }
-    dnd = { shadow = false; }
-    popup_menu = { opacity = 1.0; }
-    dropdown_menu = { opacity = 1.0; }
-  };
-  
+  tooltip = { fade = true; shadow = true; opacity = 0.95; focus = true; full-shadow = false; };
+  dock = { shadow = false; clip-shadow-above = true; }
+  dnd = { shadow = false; }
+  popup_menu = { opacity = 1.0; }
+  dropdown_menu = { opacity = 1.0; }
+};
