--- a/config/polybar/config
+++ b/config/polybar/config
@@ -58,18 +58,21 @@ c9 = #d15213
 
 
 [bar/bspwmbar]
-;monitor = ${env:MONITOR:HDMI-1}
+;monitor = DP-2
 width = 100%
 height = 28
-;offset-x = 1%
-;offset-y = 1%
+offset-x = 0%
+offset-y = 0%
 radius = 0
 fixed-center = false
+
+wm-restack = bspwm
+override-redirect = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 1
+line-size = 0
 line-color = #dbdbdb
 
 ;# Ttransparent or Solid color border around Polybar. (Size in Pixels) 
@@ -93,17 +96,14 @@ font-5 = "DejaVuSansMono Nerd Font:style=Book:size=12;2"
 ;font-6 = "DejaVu Sans:style=Regular:size=11;2"
 
 modules-left = bspwm xwindow
-;modules-center = mpd
-modules-right = pulseaudio cpu memory wlan eth date temperature battery session
+;modules-center = 
+modules-right = pulseaudio cpu memory date temperature session
 
 ; Models list - filesystem xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature date session
 
 tray-position = right
-tray-padding = 2
+tray-padding = 1
 ;tray-background = #0063ff
-
-wm-restack = bspwm
-override-redirect = true
 
 ;scroll-up = bspwm-desknext
 ;scroll-down = bspwm-deskprev
@@ -113,7 +113,7 @@ cursor-scroll = ns-resize
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:30:...%
+label = %title:0:55:...%
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -261,7 +261,7 @@ ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
 type = internal/network
-interface = enp1s0
+interface = enp5s0
 interval = 3.0
 
 format-connected-underline = #55aa55
@@ -279,7 +279,7 @@ format-disconnected =
 type = internal/date
 interval = 5
 
-date =
+date = "%d-%m"
 date-alt = " %d-%m-%Y"
 
 time = %H:%M
